--- a/Gerador/Gerador.csproj
+++ b/Gerador/Gerador.csproj
@@ -80,6 +80,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQL.cs" />
+    <Compile Include="Tabela.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tabela.Designer.cs">
+      <DependentUpon>Tabela.cs</DependentUpon>
+    </Compile>
     <Compile Include="TabelaDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -97,6 +103,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Tabela.resx">
+      <DependentUpon>Tabela.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
